fixing money and decimal inputs to be wrapped by divs, updating formgroup scss (#24)

--- a/src/components/Inputs/Money/Money.scss
+++ b/src/components/Inputs/Money/Money.scss
@@ -1,4 +1,5 @@
 .CohubMoneyInput {
+  width: 100%;
   input {
     border: none;
   }
